@@ -15,7 +15,8 @@ munin (work)
   * Plugins: New plugin generic/perdition by Micah Anderson (Deb#291855).
   * Plugins: Plugin generic/squid_cache now handles multiple caches
     (Deb#288579).
-  * Plugin: Improved graph_title of generic/postfix_* (Deb#292083).
+  * Plugins: Improved graph_title of generic/postfix_* (Deb#292083).
+  * Plugins: Turn on graph_scale for generic/postfix_mailvolume.
   * Docs: Documented minimum requirements for use of graph_sums (SF#1109040).
   * Installation: Make the single python plugin use @@PYTHON@@ again.
 
